[gd_scene load_steps=4 format=2]

[ext_resource path="res://Global_gui/Options.gd" type="Script" id=1]
[ext_resource path="res://fonts/main_menu_button2.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/Options_font.tres" type="DynamicFont" id=3]

[node name="Options" type="CanvasLayer"]
offset = Vector2( 500, 250 )
transform = Transform2D( 1, 0, 0, 1, 500, 250 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
visible = false
margin_right = 280.0
margin_bottom = 220.0

[node name="Name" type="Label" parent="Panel"]
margin_left = 80.0
margin_top = 10.0
margin_right = 200.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
text = "Настройки"
align = 1
valign = 1

[node name="music_slide" type="HSlider" parent="Panel"]
margin_left = 134.5
margin_top = 65.0
margin_right = 234.5
margin_bottom = 81.0
min_value = -35.0
max_value = 10.0
value = 5.0
__meta__ = {
"_edit_lock_": true
}

[node name="sound_slide" type="HSlider" parent="Panel"]
margin_left = 134.963
margin_top = 92.0626
margin_right = 234.963
margin_bottom = 108.063
min_value = -35.0
max_value = 10.0
value = 5.0
__meta__ = {
"_edit_lock_": true
}

[node name="Music" type="Label" parent="Panel"]
margin_left = 30.1187
margin_top = 59.6673
margin_right = 123.729
margin_bottom = 82.6673
custom_fonts/font = ExtResource( 3 )
text = "Музыка : "
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Music2" type="Label" parent="Panel"]
margin_left = 52.0
margin_top = 131.41
margin_right = 159.0
margin_bottom = 168.41
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = ExtResource( 3 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = -9
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 0
text = "Полноэкранный
 режим : "
align = 1
valign = 1
percent_visible = -0.0526316

[node name="Sounds" type="Label" parent="Panel"]
margin_left = 57.1124
margin_top = 87.0988
margin_right = 108.112
margin_bottom = 110.099
custom_fonts/font = ExtResource( 3 )
text = "Звуки :"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Fullscreen_check" type="CheckBox" parent="Panel"]
margin_left = 181.147
margin_top = 140.841
margin_right = 205.147
margin_bottom = 164.841
flat = true
align = 1
[connection signal="value_changed" from="Panel/music_slide" to="." method="_on_music_slide_value_changed"]
[connection signal="value_changed" from="Panel/sound_slide" to="." method="_on_sound_slide_value_changed"]
[connection signal="toggled" from="Panel/Fullscreen_check" to="." method="_on_Fullscreen_check_toggled"]
